Fix listen pour Railway + endpoint health

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -255,7 +255,7 @@ label input {margin-right:5px;}
 
 <script>
 document.getElementById("lorenzo-btn").onclick = () => {
-    window.open("https://tonsiteoureseaux.com", "_blank");
+    window.open("https://suulitoo.github.io/mes-liens-social-clean/", "_blank");
 };
 </script>
 
