--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,7 +100,7 @@
   <div class="overlay">
     <div class="box">
       <h1>Bienvenue à <span>NEXUM</span></h1>
-      <p>La boutique officielle de coins FiveM</p>
+      <p>La boutique officielle de coins de notre serveur FiveM</p>
       <a href="login.html">
         <button class="btn">Continuer</button>
       </a>
