--- a/frontend/login.html
+++ b/frontend/login.html
@@ -106,12 +106,16 @@
   </div>
 
   <!-- Contenu central -->
-  <div class="center-box">
-    <h2>Connexion à <span class="nexum">NEXUM</span></h2>
-    <p>Connecte-toi avec Discord pour continuer</p>
-    <a href="https://nexum-backend-production-426d.up.railway.app/auth/discord"><button>Connexion Discord</button></a>
-  </div>
+<div class="center-box">
+  <h2>Connexion à <span class="nexum">NEXUM</span></h2>
+  <p>N'oublie pas de lire les <a href="conditions.html" target="_blank"></abutton>conditions de vente</button></p>
+  
+  <!-- Option 1 : Lien stylé en bouton (recommandé) -->
+  <a href="shop.html" class="btn-shop"><button>Accéder au shop →</button></a>
 
+  <!-- Option 2 : Vrai bouton avec JS (si tu préfères) -->
+  <!-- <button onclick="window.location.href = '/shop';">Accéder au shop</button> -->
+</div>
 </body>
 
 <!-- Container flottant pour bouton + flèche -->
